@@ -7,7 +7,6 @@
  *
  * SPDX-License-Identifier: BSD-3-Clause
  */
-
 package com.sun.istack.tools;
 
 import java.io.Closeable;
@@ -17,26 +16,16 @@ import org.apache.tools.ant.IntrospectionHelper;
 import org.apache.tools.ant.Task;
 
 import java.io.IOException;
-import java.lang.reflect.Field;
-import java.lang.reflect.Method;
-import java.lang.reflect.InvocationTargetException;
-import java.net.URLClassLoader;
-import java.security.AccessController;
-import java.security.PrivilegedAction;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Iterator;
 import java.util.Map.Entry;
 import org.apache.tools.ant.AntClassLoader;
 
 /**
- * Executes a {@link Task} in a special class loader that allows
- * us to control where to load 2.1 APIs, even if we run in Java 6.
- *
- * <p>
- * No JDK 1.5 code here, please. This allows us to detect "require JDK5" bug nicely.
+ * Executes a {@link Task} in a special class loader that allows us to control
+ * where to load particular APIs.
  *
  * @author Kohsuke Kawaguchi
  * @author Bhakti Mehta
@@ -45,14 +34,17 @@ public abstract class ProtectedTask extends Task implements DynamicConfigurator 
 
     private final AntElement root = new AntElement("root");
 
+    @Override
     public void setDynamicAttribute(String name, String value) throws BuildException {
-        root.setDynamicAttribute(name,value);
+        root.setDynamicAttribute(name, value);
     }
 
+    @Override
     public Object createDynamicElement(String name) throws BuildException {
         return root.createDynamicElement(name);
     }
 
+    @Override
     public void execute() throws BuildException {
         //Leave XJC2 in the publicly visible place
         // and then isolate XJC1 in a child class loader,
@@ -62,65 +54,37 @@ public abstract class ProtectedTask extends Task implements DynamicConfigurator 
         ClassLoader ccl = SecureLoader.getContextClassLoader();
         try {
             ClassLoader cl = createClassLoader();
-            Class driver = cl.loadClass(getCoreClassName());
+            @SuppressWarnings("unchecked")
+            Class<Task> driver = (Class<Task>) cl.loadClass(getCoreClassName());
 
-            Task t = (Task)driver.newInstance();
+            Task t = driver.getDeclaredConstructor().newInstance();
             t.setProject(getProject());
             t.setTaskName(getTaskName());
             root.configure(t);
 
             SecureLoader.setContextClassLoader(cl);
-            t.execute();
-            
-            driver = null;
-            t.setTaskName(null);
-            t.setProject(null);
-            t = null;
+            try {
+                t.execute();
+            } finally {
+                driver = null;
+                t.setTaskName(null);
+                t.setProject(null);
+                t = null;
+            }
         } catch (UnsupportedClassVersionError e) {
-            throw new BuildException("Requires JDK 5.0 or later. Please download it from http://java.sun.com/j2se/1.5/");
-        } catch (ClassNotFoundException e) {
-            throw new BuildException(e);
-        } catch (InstantiationException e) {
-            throw new BuildException(e);
-        } catch (IllegalAccessException e) {
-            throw new BuildException(e);
-        } catch (IOException e) {
+            throw new BuildException("Requires Java SE 8 or later. Please download it from https://www.oracle.com/java/technologies/javase-download.html");
+        } catch (ReflectiveOperationException | IOException e) {
             throw new BuildException(e);
         } finally {
             ClassLoader cl = Thread.currentThread().getContextClassLoader();
             SecureLoader.setContextClassLoader(ccl);
-            
+
             //close/cleanup all classloaders but the one which loaded this class
             while (cl != null && !ccl.equals(cl)) {
-                if (cl instanceof Closeable) {
-                    //JDK7+, ParallelWorldClassLoader, Ant (AntClassLoader5)
-                    try {
-                        ((Closeable) cl).close();
-                    } catch (IOException ex) {
-                        throw new BuildException(ex);
-                    }
-                } else {
-                    if (cl instanceof URLClassLoader) {
-                        //JDK6 - API jars are loaded by instance of URLClassLoader
-                        //so use proprietary API to release holded resources
-                        try {
-                            Class clUtil = ccl.loadClass("sun.misc.ClassLoaderUtil");
-                            Method release = clUtil.getDeclaredMethod("releaseLoader", URLClassLoader.class);
-                            release.invoke(null, cl);
-                        } catch (ClassNotFoundException ex) {
-                            //not Sun JDK 6, ignore
-                        } catch (IllegalAccessException ex) {
-                            throw new BuildException(ex);
-                        } catch (IllegalArgumentException ex) {
-                            throw new BuildException(ex);
-                        } catch (InvocationTargetException ex) {
-                            throw new BuildException(ex);
-                        } catch (NoSuchMethodException ex) {
-                            throw new BuildException(ex);
-                        } catch (SecurityException ex) {
-                            throw new BuildException(ex);
-                        }
-                    }
+                try {
+                    ((Closeable) cl).close();
+                } catch (IOException ex) {
+                    throw new BuildException(ex);
                 }
                 cl = getParentClassLoader(cl);
             }
@@ -129,34 +93,26 @@ public abstract class ProtectedTask extends Task implements DynamicConfigurator 
     }
 
     /**
-     * Returns the name of the class that extends {@link Task}.
-     * This class will be loaded int the protected classloader.
+     * Returns the name of the class that extends {@link Task}.This class will
+     * be loaded int the protected classloader.
+     * @return Task class name
      */
     protected abstract String getCoreClassName();
 
     /**
      * Creates a protective class loader that will host the actual task.
+     * @return ClassLoader use d for task execution
+     * @throws java.lang.ClassNotFoundException if required APIs are not found
+     * @throws java.io.IOException if error happens
      */
     protected abstract ClassLoader createClassLoader() throws ClassNotFoundException, IOException;
 
-    /* workaround for: https://issues.apache.org/bugzilla/show_bug.cgi?id=35436
-       which is fixed in Ant 1.8 but 1.7 still needs to be supported */
     private ClassLoader getParentClassLoader(final ClassLoader cl) {
         //Calling getParent() on AntClassLoader doesn't return the - expected -
         //actual parent classloader but always the SystemClassLoader.
         if (cl instanceof AntClassLoader) {
-            ClassLoader loader = null;
             //1.8 added getConfiguredParent() to get correct 'parent' classloader
-            if (System.getSecurityManager() == null) {
-                loader = getPCL(cl);
-            } else {
-                loader = AccessController.doPrivileged(
-                        new PrivilegedAction<ClassLoader>() {
-                            public ClassLoader run() {
-                                return getPCL(cl);
-                            }
-                        });
-            }
+            ClassLoader loader = ((AntClassLoader) cl).getConfiguredParent();
             // we may be called by Gradle, in such case do not close its classloader,
             // so Gradle can handle it itself and return null here;
             // in other cases return parent or null if not found
@@ -166,59 +122,27 @@ public abstract class ProtectedTask extends Task implements DynamicConfigurator 
         return SecureLoader.getParentClassLoader(cl);
     }
 
-    private ClassLoader getPCL(ClassLoader cl) {
-        try {
-            Method parentM = AntClassLoader.class.getDeclaredMethod("getConfiguredParent");
-            return (ClassLoader) parentM.invoke(cl);
-        } catch (IllegalAccessException ex) {
-            throw new BuildException(ex);
-        } catch (IllegalArgumentException ex) {
-            throw new BuildException(ex);
-        } catch (InvocationTargetException ex) {
-            throw new BuildException(ex);
-        } catch (NoSuchMethodException ex) {
-            //Ant 1.7 try to get 'parent' field
-            Field parentF = null;
-            try {
-                parentF = AntClassLoader.class.getDeclaredField("parent");
-                parentF.setAccessible(true);
-                return (ClassLoader) parentF.get(cl);
-            } catch (IllegalAccessException ex1) {
-                throw new BuildException(ex1);
-            } catch (IllegalArgumentException ex1) {
-                throw new BuildException(ex1);
-            } catch (NoSuchFieldException ex1) {
-                //not Ant 1.8 nor 1.7
-                //should be some warning here?
-            } catch (SecurityException ex1) {
-                throw new BuildException(ex1);
-            } finally {
-                if (parentF != null) {
-                    parentF.setAccessible(false);
-                }
-            }
-        }
-        return null;
-    }
-
     /**
      * Captures the elements and attributes.
      */
     private class AntElement implements DynamicConfigurator {
+
         private final String name;
 
-        private final Map/*<String,String>*/ attributes = new HashMap();
+        private final Map<String,String> attributes = new HashMap<>();
 
-        private final List/*<AntElement>*/ elements = new ArrayList();
+        private final List<AntElement> elements = new ArrayList<>();
 
         public AntElement(String name) {
             this.name = name;
         }
 
+        @Override
         public void setDynamicAttribute(String name, String value) throws BuildException {
-            attributes.put(name,value);
+            attributes.put(name, value);
         }
 
+        @Override
         public Object createDynamicElement(String name) throws BuildException {
             AntElement e = new AntElement(name);
             elements.add(e);
@@ -232,19 +156,16 @@ public abstract class ProtectedTask extends Task implements DynamicConfigurator 
             IntrospectionHelper ih = IntrospectionHelper.getHelper(antObject.getClass());
 
             // set attributes first
-            for (Iterator itr = attributes.entrySet().iterator(); itr.hasNext();) {
-                Entry att = (Entry)itr.next();
-                ih.setAttribute(getProject(), antObject, (String)att.getKey(), (String)att.getValue());
+            for (Entry<String, String> att : attributes.entrySet()) {
+                ih.setAttribute(getProject(), antObject, att.getKey(), att.getValue());
             }
 
             // then nested elements
-            for (Iterator itr = elements.iterator(); itr.hasNext();) {
-                AntElement e = (AntElement) itr.next();
-                Object child = ih.createElement(getProject(), antObject, e.name);
+            for (AntElement e : elements) {
+                Object child = ih.getElementCreator(getProject(), "", antObject, e.name, null).create();
                 e.configure(child);
                 ih.storeElement(getProject(), antObject, child, e.name);
             }
         }
     }
 }
-
